--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,12 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.splash-bg {
+    background-image: url('../src/splash.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 300px;
+}
 
 
 /* backgrounds css */
