--- a/src/index.css
+++ b/src/index.css
@@ -197,3 +197,16 @@
     background-color: #0a69bd;
     box-shadow: 2px 2px 8px #7cd5fa;
 }
+
+@media screen and (orientation:portrait) {
+  body {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+    position: absolute;
+    top: 0;
+    left: 100%;
+  }
+}
