--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@
 @media screen and (orientation: landscape) {
     body {
       transform: rotate(-90deg);
-      transform-origin: center center;
+      transform-origin: top left;
       width: 100vh;
       height: 100vw;
       overflow-x: hidden;
